@startuml example7_1
!pragma useIntermediatePackages false

class example7_1.Animal {
  island: None
  name: None
  x: None
  y: None
}
class example7_1.Island {
  grid_size: None
  grid: None
}
class example7_1.Predator {
  starve_clock: None
  breed_clock: None
}
class example7_1.Prey {
  breed_clock: None
}
example7_1.Animal <|-- example7_1.Predator
example7_1.Animal <|-- example7_1.Prey
footer Generated by //py2puml//
@enduml

